fixes safari owl-carousel image wrapping bug

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,6 @@ body {
 
 
 
-
-
 /* home view */
 
 .pig-image-container {
@@ -414,14 +412,27 @@ body {
     float: left;
     padding-left: 120px;
   }
+  .project-image img {
+    height: 140px;
+    margin-right: 0px;
+  }
+
 
 
   .owl-nav {
    display: none;
   }
-     .owl-carousel .owl-item img {
-  height: 140px;
-  -webkit-transform-style: preserve-3d;
+  .owl-carousel .owl-item img {
+    height: 140px;
+    -webkit-transform-style: preserve-3d;
+  }
+
+  .owl-carousel .owl-stage-outer {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 140px;
+    z-index: 1;
   }
 
 
@@ -474,7 +485,8 @@ body {
      position: absolute;
      margin-left: 30px;
      margin-right: 0px;
-   }
+  }
+
 
 
 
@@ -489,11 +501,6 @@ body {
 and (min-device-width: 375px) 
 and (max-device-width: 667px) 
 and (-webkit-min-device-pixel-ratio: 2) { 
-
-  .owl-carousel {
-    max-height: 440px;
-    overflow: hidden;
-  }
 
 /* top container */
 
@@ -583,6 +590,14 @@ and (-webkit-min-device-pixel-ratio: 2) {
    display: none;
   }
 
+  .owl-carousel .owl-stage-outer {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    z-index: 1;
+  }
+
 
   /* fiction view */
 
@@ -641,10 +656,6 @@ and (-webkit-min-device-pixel-ratio: 2) {
     line-height: 45px;
     font-size: 30px;
   }
-
-
-
-
 
 
 
